--- a/BizBenchMark.csproj
+++ b/BizBenchMark.csproj
@@ -39,6 +39,18 @@
     <Reference Include="BenchmarkDotNet.Annotations, Version=0.12.0.0, Culture=neutral, PublicKeyToken=aa0ca2f9092cefc4, processorArchitecture=MSIL">
       <HintPath>packages\BenchmarkDotNet.Annotations.0.12.0\lib\netstandard2.0\BenchmarkDotNet.Annotations.dll</HintPath>
     </Reference>
+    <Reference Include="BizHawk.Client.Common">
+      <HintPath>..\BizHawk\output\BizHawk.Client.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="BizHawk.Common">
+      <HintPath>..\BizHawk\output\BizHawk.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="BizHawk.Emulation.Common">
+      <HintPath>..\BizHawk\output\BizHawk.Emulation.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="BizHawk.Emulation.Cores">
+      <HintPath>..\BizHawk\output\BizHawk.Emulation.Cores.dll</HintPath>
+    </Reference>
     <Reference Include="CommandLine, Version=2.4.3.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
       <HintPath>packages\CommandLineParser.2.4.3\lib\netstandard2.0\CommandLine.dll</HintPath>
     </Reference>
