include NesCarts.xml and set up loading of it

--- a/BizBenchMark.csproj
+++ b/BizBenchMark.csproj
@@ -261,6 +261,9 @@
     <Content Include="blip_buf.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="NesCarts.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
